--- a/main.ui
+++ b/main.ui
@@ -53,7 +53,7 @@
        <x>10</x>
        <y>30</y>
        <width>671</width>
-       <height>35</height>
+       <height>41</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -80,6 +80,24 @@
       </item>
      </layout>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="btnCrea">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>110</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Crea</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
