--- a/main.ui
+++ b/main.ui
@@ -29,9 +29,9 @@
    <widget class="QPushButton" name="btnCrea">
     <property name="geometry">
      <rect>
-      <x>590</x>
+      <x>520</x>
       <y>70</y>
-      <width>101</width>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
@@ -71,7 +71,7 @@
      <rect>
       <x>10</x>
       <y>70</y>
-      <width>571</width>
+      <width>501</width>
       <height>31</height>
      </rect>
     </property>
@@ -90,6 +90,27 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnSalva">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>70</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Salva</string>
     </property>
    </widget>
   </widget>
