--- a/main.ui
+++ b/main.ui
@@ -76,7 +76,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>hhhhh</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="lblImage">
